# simd-trick

./: Cargo.toml  README.md
src/: array_utils.rs  lib.rs
