[package]
name = "simd-trick"
version = "0.2.1"
authors = ["scottmcm"]
edition = "2018"
license = "MIT"
description = "A crate to trick the optimizer into generating SIMD instructions."
documentation = "https://docs.rs/simd-trick/"
repository = "https://github.com/scottmcm/simd-trick"
keywords = ["simd", "array", "no_std"]
categories = ["no-std"]

[dependencies]
# none!
